--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.18",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "keycloak-js": "^23.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-color": "^2.19.3",
