local kafka chat room

--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "react-bootstrap": "^2.9.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "react-stomp": "^5.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-color": "^3.0.10",
     "@types/react-dom": "^18.2.7",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
